# audio-search-cli

./: .gitignore  README.md  audio_search.py  pyproject.toml  requirements.txt
transcribers/: __init__.py  base.py  faster_whisper_backend.py  transformers_backend.py  whisper_backend.py  whisper_cpp_backend.py
